# 360Droid-splat

./: .brooks-lint-history.json  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
backend/: __init__.py
configs/: boundary_globalba100_localba8_pose2e4_umeyama5_abd6213_norefiner.yaml  boundary_globalba100_margin0_abd6213_base.yaml  boundary_globalba25_stride4_margin0_abd6213_norefiner.yaml  pano_anchor_splat_decoder_smoke.yaml  pano_anchor_splat_refiner_smoke.yaml  pano_droid_gs_slam.yaml  pano_droid_gs_slam_neural_scaffold.yaml  pano_droid_train.yaml  pano_droid_train_panocity_beijing.yaml  pano_resplat_dense_world_init_256x512.yaml  pano_resplat_dense_world_refine_256x512.yaml  pano_resplat_init.yaml  pano_resplat_joint.yaml  pano_resplat_online_ob3d_archiviz_flat_quality_gsplat360_real.yaml  pano_resplat_online_ob3d_barbershop_quality_gsplat360_real.yaml  pano_resplat_online_ob3d_smoke.yaml  pano_resplat_overfit.yaml  pano_resplat_panovggt_aligned_init_128x256_render_512x1024.yaml  pano_resplat_panovggt_aligned_refine_resplat_update_128x256_render_512x1024.yaml  pano_resplat_point_decoder_gaussian_init_128x256_render_512x1024.yaml  pano_resplat_point_decoder_gaussian_refine_ghosting_error_decoder_128x256_render_512x1024.yaml  pano_resplat_point_decoder_gaussian_refine_resplat_update_128x256_render_512x1024.yaml  pano_resplat_point_decoder_gaussian_refine_voxel_anchor_128x256_render_512x1024.yaml  pano_resplat_refine.yaml  pano_vggt_legacy_online_panocity_beijing.yaml  pano_vggt_long_gs_slam.yaml  pano_vggt_long_panocity_beijing.yaml  (+58 more)
(+286 files in other folders)
