[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pano-droid-gs-slam"
version = "0.1.0"
description = "PanoDROID-MVP frontend with PFGS360 panoramic Gaussian SLAM backend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pillow",
  "pyyaml",
  "torch",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["frontend*", "mapping*", "backend*", "system*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

